--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "dependencies": {
+    "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "regenerator-runtime": "^0.11.1"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
